======= 0.0.1

- added new start script `helpers/index.js` which supports `--release` mode (default: `debug`)
- added `LOADCONFIG(string/array/object)`

- updated `FILE('/readme.md', PATH.root('readme.md'))` or `FILE('/readme.md', 'https://wiki.totaljs.com')`