@@ -2,5 +2,6 @@
 
 - added new start script `helpers/index.js` which supports `--release` mode (default: `debug`)
 - added `LOADCONFIG(string/array/object)`
+- added `FAKE(schemaname, [required_only])`, suggested by Helfo
 
 - updated `FILE('/readme.md', PATH.root('readme.md'))` or `FILE('/readme.md', 'https://wiki.totaljs.com')`
